log/build_2025-12-09_17-25-35/grid_map_ros/stdout_stderr.log
[  9%] Building CXX object gtest/CMakeFiles/gtest.dir/src/gtest-all.cc.o
Consolidate compiler generated dependencies of target grid_map_ros
[ 18%] Building CXX object gtest/CMakeFiles/gtest_main.dir/src/gtest_main.cc.o
[ 27%] Building CXX object CMakeFiles/grid_map_ros.dir/src/GridMapMsgHelpers.cpp.o
[ 36%] Building CXX object CMakeFiles/grid_map_ros.dir/src/GridMapRosConverter.cpp.o
[ 45%] Linking CXX static library libgtest_main.a
[ 45%] Built target gtest_main
[ 54%] Building CXX object CMakeFiles/grid_map_ros.dir/src/PolygonRosConverter.cpp.o
In file included from /opt/ros/humble/include/rclcpp/rclcpp/logging.hpp:24,
                 from /opt/ros/humble/include/rclcpp/rclcpp/client.hpp:40,
                 from /opt/ros/humble/include/rclcpp/rclcpp/callback_group.hpp:24,
                 from /opt/ros/humble/include/rclcpp/rclcpp/any_executable.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategy.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor_options.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor.hpp:37,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors/multi_threaded_executor.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors.hpp:21,
                 from /opt/ros/humble/include/rclcpp/rclcpp/rclcpp.hpp:155,
                 from /home/tianbot/slash_ws/src/slash_perception/grid_map/grid_map_ros/include/grid_map_ros/GridMapMsgHelpers.hpp:13,
                 from /home/tianbot/slash_ws/src/slash_perception/grid_map/grid_map_ros/src/GridMapRosConverter.cpp:33:
/home/tianbot/slash_ws/src/slash_perception/grid_map/grid_map_ros/src/GridMapRosConverter.cpp: In static member function ‘static bool grid_map::GridMapRosConverter::fromOccupancyGrid(const OccupancyGrid&, const string&, grid_map::GridMap&)’:
/home/tianbot/slash_ws/src/slash_perception/grid_map/grid_map_ros/src/GridMapRosConverter.cpp:278:39: error: ‘std::string rosidl_generator_traits::to_yaml(const Quaternion&)’ is deprecated: use geometry_msgs::msg::to_yaml() instead [-Werror=deprecated-declarations]
  278 |       rosidl_generator_traits::to_yaml(occupancyGrid.info.origin.orientation).c_str());
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /opt/ros/humble/include/geometry_msgs/geometry_msgs/msg/quaternion.hpp:9,
                 from /home/tianbot/slash_ws/src/slash_perception/grid_map/grid_map_ros/src/GridMapRosConverter.cpp:12:
/opt/ros/humble/include/geometry_msgs/geometry_msgs/msg/detail/quaternion__traits.hpp:129:20: note: declared here
  129 | inline std::string to_yaml(const geometry_msgs::msg::Quaternion & msg)
      |                    ^~~~~~~
In file included from /opt/ros/humble/include/rclcpp/rclcpp/logging.hpp:24,
                 from /opt/ros/humble/include/rclcpp/rclcpp/client.hpp:40,
                 from /opt/ros/humble/include/rclcpp/rclcpp/callback_group.hpp:24,
                 from /opt/ros/humble/include/rclcpp/rclcpp/any_executable.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategy.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/memory_strategies.hpp:18,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor_options.hpp:20,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executor.hpp:37,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors/multi_threaded_executor.hpp:25,
                 from /opt/ros/humble/include/rclcpp/rclcpp/executors.hpp:21,
                 from /opt/ros/humble/include/rclcpp/rclcpp/rclcpp.hpp:155,
                 from /home/tianbot/slash_ws/src/slash_perception/grid_map/grid_map_ros/include/grid_map_ros/GridMapMsgHelpers.hpp:13,
                 from /home/tianbot/slash_ws/src/slash_perception/grid_map/grid_map_ros/src/GridMapRosConverter.cpp:33:
/home/tianbot/slash_ws/src/slash_perception/grid_map/grid_map_ros/src/GridMapRosConverter.cpp: In static member function ‘static bool grid_map::GridMapRosConverter::fromCostmap(const Costmap&, const string&, grid_map::GridMap&)’:
/home/tianbot/slash_ws/src/slash_perception/grid_map/grid_map_ros/src/GridMapRosConverter.cpp:377:39: error: ‘std::string rosidl_generator_traits::to_yaml(const Quaternion&)’ is deprecated: use geometry_msgs::msg::to_yaml() instead [-Werror=deprecated-declarations]
  377 |       rosidl_generator_traits::to_yaml(costmap.metadata.origin.orientation).c_str());
      |       ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~^~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
In file included from /opt/ros/humble/include/geometry_msgs/geometry_msgs/msg/quaternion.hpp:9,
                 from /home/tianbot/slash_ws/src/slash_perception/grid_map/grid_map_ros/src/GridMapRosConverter.cpp:12:
/opt/ros/humble/include/geometry_msgs/geometry_msgs/msg/detail/quaternion__traits.hpp:129:20: note: declared here
  129 | inline std::string to_yaml(const geometry_msgs::msg::Quaternion & msg)
      |                    ^~~~~~~
cc1plus: all warnings being treated as errors
gmake[2]: *** [CMakeFiles/grid_map_ros.dir/build.make:76：CMakeFiles/grid_map_ros.dir/src/GridMapRosConverter.cpp.o] 错误 1
gmake[1]: *** [CMakeFiles/Makefile2:157：CMakeFiles/grid_map_ros.dir/all] 错误 2
gmake[1]: *** 正在等待未完成的任务....
[ 63%] Linking CXX static library libgtest.a
[ 63%] Built target gtest
gmake: *** [Makefile:146：all] 错误 2
